--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "axios": "^0.26.1",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
